assets/css/styles.css
body {
  font-size: 1.3rem !important;
  font-family: 'Barlow Condensed', 'Arial', sans-serif;
  /* font-weight: bold; */
}

nav a:hover, .link-grey {
  color: #808080 !important;
}

.moto-gallery-header {
  font-size: 1.5rem;
  font-weight: bold;
}

.moto-gallery-desc {
  font-size: 1rem;
}


/*
h1 {
  font-size: 2.2vw !important;
  font-weight: bold;
} */


h1 {
  font-size: 1.5rem !important;
  font-weight: bold;
}

/* nnew */
/* h2 {
  font-size: 1.6vw !important;
  font-weight: bold;
} */

h2 {
  font-size: 1.4rem !important;
  font-weight: bold;
}

p, .justify-t{
  text-align: justify;
  text-justify: inter-word;
}

.modal-dialog {
  max-width: 90% !important;
}

#navbarSupportedContent {
  font-size: larger;
  font-weight: bold;
}

#address-ico:hover {
  color: #3B5998;
}
@media (max-width: 544px) {
  .page_warkot_font {
    /* font-size: 2.1vw !important; */
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }

  .page_offer_font {
    /* font-size: 2.1vw !important; */
    /* font-size: 1.8vw !important; */
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }

  .page_aboutUs_font {
    /* font-size: 2.1vw !important; */
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }

  .center-logo {
    display: block;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (max-width: 767px) and (min-width: 545px) {
  .page_warkot_font {
    /* font-size: 1.9vw !important; */
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }

  .page_offer_font {
    /* font-size: 1.8vw !important; */
    /* font-size: 1.8vw !important; */
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }

  .page_aboutUs_font {
    /* font-size: 1.8vw !important; */
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (max-width: 992px) and (min-width: 768px) {
  .page_warkot_font {
    font-size: 1.2vw !important;
  }

  .page_offer_font {
    font-size: 1.1vw !important;
  }

  .page_aboutUs_font {
    font-size: 1.05vw !important;
  }

  #motorcycle-scratch-div {
    display: none;
  }
}

@media (max-width: 1200px) and (min-width: 993px) {
  .page_warkot_font {
    font-size: 1.2vw !important;
  }

  .page_offer_font {
    font-size: 1.1vw !important;
  }


  .page_aboutUs_font {
    font-size: 1.05vw !important;
  }
}

@media (min-width: 1201px) {
  .page_warkot_font {
    font-size: 1.0vw !important;
  }

  .page_offer_font {
    font-size: 0.9vw !important;
  }

  .page_aboutUs_font {
    font-size: 1.0vw !important;
  }
}

.parent-of-left-right-containers {
display: flex;
flex-direction: column;
}

.right-container {
flex: 1;
}

